<resources>
    <string name="app_name">Inventory App</string>
    <string name="empty_text_string">No items found. Click \+ to add new items.</string>
    <string name="label_item_name_string">Item Name</string>
    <string name="label_price_string">Price</string>
    <string name="label_quantity_string">Qty</string>
    <string name="sale">SALE</string>
    <string name="edit_text_hint_supplier_name">Supplier Name</string>
    <string name="edit_text_hint_supplier_phone">Supplier Phone</string>
    <string name="button_call">CALL</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_item">Add Item</string>
    <string name="delete_all">Delete All</string>
    <string name="title_edit_product">Edit Product</string>
    <string name="title_add_product">Add a Product</string>
    <string name="action_save">Save</string>
    <string name="toast_edit_error">Error. Couldn\'t edit product.</string>
    <string name="toast_edit_saved">Success. Product edited</string>
    <string name="toast_save_success">Sucess! Product saved</string>
    <string name="toast_save_failure">Error saving product</string>
    <string name="delete_success">Product Deleted</string>
    <string name="delete_error">Error deleting product</string>
    <string name="delete_product_alertdialog_message">Delete %s?</string>
    <string name="cancel">Cancel</string>
    <string name="all_products">all products</string>
    <string name="toast_delete_all_fail">Error deleting products</string>
    <string name="toast_delete_all_success">All products deleted</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="stock_zero">Stock not available</string>
    <string name="toast_all_fields_compulsory">All fields compulsory</string>
    <string name="toast_no_negative">Values must be non-negative</string>
    <string name="required">Required</string>
    <string name="positive_only">Positive value only</string>
    <string name="toast_errors_on_form">Error(s) on the form!</string>
</resources>
